# settings-daemon

./: README.md  config.vala.in  meson.build  meson_options.txt
.github/workflows/: main.yml  release.yml
data/: autostart.desktop  io.elementary.SettingsDaemon.AccountsService.xml  io.elementary.settings-daemon.check-for-firmware-updates.service  io.elementary.settings-daemon.check-for-firmware-updates.service.in  io.elementary.settings-daemon.check-for-firmware-updates.timer  io.elementary.settings-daemon.gschema.xml  io.elementary.settings-daemon.policy.in  io.elementary.settings-daemon.service  io.elementary.settings-daemon.service.in  io.elementary.settings-daemon.system-update.service.in  io.elementary.settings-daemon.system-update.timer  io.elementary.settings-daemon.system-upgrade.helper  meson.build  settings-daemon.appdata.xml.in  settings-daemon.metainfo.xml.in  settings-daemon.policy.in
data/system-upgrades/focal/etc/apt/sources.list.d/: elementary.list
data/system-upgrades/jammy/etc/apt/sources.list.d/: elementary.list
debian/: changelog  control  copyright
meson/: create-symlink.sh
periodic-tasks/: meson.build
periodic-tasks/check-for-firmware-updates/: Application.vala  io.elementary.settings-daemon.check-for-firmware-updates.service  io.elementary.settings-daemon.check-for-firmware-updates.timer  meson.build
po/: LINGUAS  POTFILES  aa.po  ab.po  ace.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  (+172 more)
settings-portal/: Error.vala  Main.vala  Settings.vala  io.elementary.settings-daemon.portal  io.elementary.settings-daemon.xdg-desktop-portal.service.in  meson.build  org.freedesktop.impl.portal.desktop.elementary.settings-daemon.service.in
src/: AccountsService.vala  Application.vala  Demo.vala  FirmwareClient.vala  PrefersColorSchemeServer.vala  SessionManager.vala  meson.build
src/Backends/: AccentColorManager.vala  AccentColorSettings.vala  ApplicationShortcuts.vala  ColorSettings.vala  DisplaySettings.vala  Firmware.vala  Housekeeping.vala  InterfaceSettings.vala  KeyboardSettings.vala  ManualSchedule.vala  MouseSettings.vala  NightLightSettings.vala  PowerProfilesSync.vala  PrefersColorSchemeSettings.vala  Schedule.vala  ScheduleManager.vala  SystemUpdate.vala  SystemUpgrade.vala  TimeSettings.vala  UbuntuDrivers.vala  WeatherAlerts.vala
src/Backends/AccentColor/: AccentColorManager.vala  ColorExtractor.vala
src/Backends/FocusModes/: GLibSetting.vala  Manager.vala  Mode.vala  Setting.vala  TimeTracker.vala
src/Backends/ScheduleManager/: DaylightSchedule.vala  ManualSchedule.vala  Schedule.vala  ScheduleManager.vala  TimeTracker.vala
src/Backends/SystemUpdate/: SystemUpdate.vala
src/DBus/: DesktopIntegration.vala
src/Objects/: NamedColor.vala
src/Utils/: ColorExtractor.vala  Inhibitor.vala  Palette.vala  PkUtils.vala  SessionUtils.vala  SunriseSunsetCalculator.vala  SystemUpgradeHelper.vala
