option('busctlpath', type: 'string', value: '', description: 'custom path to busctl executable')
option('ubuntu_drivers', type: 'boolean', value: true, description: 'whether to enable ubuntu drivers integration')
option('systemdsystemunitdir', type: 'string', value: '', description: 'custom directory for systemd system units, or \'no\' to disable')
option('systemduserunitdir', type: 'string', value: '', description: 'custom directory for systemd user units, or \'no\' to disable')
